--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Software Engineer Portfolio</title>
+    <title>Edgard Murillo - Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -22,8 +22,14 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
+            <div class="nav-right">
+                <button id="theme-toggle" class="theme-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
+                <div class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
     </nav>
@@ -33,8 +39,8 @@
         <div class="hero-content">
             <h1>Edgard Murillo</h1>
             <h2>Software Engineer</h2>
-            <p>Web • Mobile • Blockchain</p>
-            <p>9+ years of experience in software development</p>
+            <p class="hero-subtitle">Web • Mobile • Blockchain</p>
+            <p class="hero-description">9+ years of experience in software development</p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary">Get in Touch</a>
                 <a href="#projects" class="btn secondary">View Projects</a>
@@ -54,6 +60,20 @@
                     <p>I am passionate about creating innovative solutions and constantly expanding my knowledge in
                         emerging technologies. My adaptability and quick learning ability enable me to stay at the
                         forefront of technological advancements.</p>
+                    <div class="about-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">9+</span>
+                            <span class="stat-label">Years Experience</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">50+</span>
+                            <span class="stat-label">Projects Completed</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">30+</span>
+                            <span class="stat-label">Happy Clients</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,31 +85,40 @@
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Web Development</h3>
+                    <h3><i class="fas fa-code"></i> Web Development</h3>
                     <div class="skill-items">
                         <span class="skill-item">HTML5</span>
                         <span class="skill-item">CSS3</span>
                         <span class="skill-item">JavaScript</span>
                         <span class="skill-item">React</span>
                         <span class="skill-item">Node.js</span>
+                        <span class="skill-item">TypeScript</span>
+                        <span class="skill-item">Next.js</span>
+                        <span class="skill-item">GraphQL</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Mobile Development</h3>
+                    <h3><i class="fas fa-mobile-alt"></i> Mobile Development</h3>
                     <div class="skill-items">
                         <span class="skill-item">React Native</span>
                         <span class="skill-item">iOS</span>
                         <span class="skill-item">Android</span>
                         <span class="skill-item">Flutter</span>
+                        <span class="skill-item">Swift</span>
+                        <span class="skill-item">Kotlin</span>
+                        <span class="skill-item">Firebase</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Blockchain</h3>
+                    <h3><i class="fas fa-link"></i> Blockchain</h3>
                     <div class="skill-items">
                         <span class="skill-item">Solidity</span>
                         <span class="skill-item">Web3.js</span>
                         <span class="skill-item">Smart Contracts</span>
                         <span class="skill-item">DApps</span>
+                        <span class="skill-item">Ethereum</span>
+                        <span class="skill-item">IPFS</span>
+                        <span class="skill-item">Hardhat</span>
                     </div>
                 </div>
             </div>
@@ -107,6 +136,11 @@
                         <p class="timeline-date">2019 - Present</p>
                         <p>Leading development of enterprise-level applications, mentoring junior developers, and
                             implementing best practices in software development.</p>
+                        <ul class="timeline-details">
+                            <li>Architected and developed scalable web applications using React and Node.js</li>
+                            <li>Implemented CI/CD pipelines and automated testing strategies</li>
+                            <li>Led a team of 5 developers in delivering complex projects</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -115,6 +149,11 @@
                         <p class="timeline-date">2015 - 2019</p>
                         <p>Developed and maintained web and mobile applications, collaborated with cross-functional
                             teams, and implemented new features.</p>
+                        <ul class="timeline-details">
+                            <li>Built responsive web applications using modern JavaScript frameworks</li>
+                            <li>Developed mobile applications using React Native</li>
+                            <li>Integrated third-party APIs and services</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -250,9 +289,10 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="#" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-link" title="Medium"><i class="fab fa-medium"></i></a>
                 </div>
             </div>
         </div>
