update profile to anas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edgard Murillo - Software Engineer</title>
+    <title>Anas Mohamed - Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -37,7 +37,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Edgard Murillo</h1>
+            <h1>Anas Mohamed</h1>
             <h2>Software Engineer</h2>
             <p class="hero-subtitle">Web • Mobile • Blockchain</p>
             <p class="hero-description">9+ years of experience in software development</p>
@@ -277,15 +277,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p>email@example.com</p>
+                        <p>anas.mohamed@gmail.com</p>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <p>+1 234 567 890</p>
+                        <i class="fas fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/anas-fullstack/">LinkedIn</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>Location, Country</p>
+                        <p>Egypt, Cairo</p>
                     </div>
                 </div>
                 <div class="social-links">
