--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-content">
-            <div class="logo">ED</div>
+            <div class="logo">Anas</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -43,7 +43,8 @@
             <p class="hero-description">9+ years of experience in software development</p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary">Get in Touch</a>
-                <a href="#projects" class="btn secondary">View Projects</a>
+                <a href="#projects" class="btn secondary" style="color: white;">View
+                    Projects</a>
             </div>
         </div>
     </section>
@@ -132,27 +133,69 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Senior Software Engineer</h3>
-                        <p class="timeline-date">2019 - Present</p>
-                        <p>Leading development of enterprise-level applications, mentoring junior developers, and
-                            implementing best practices in software development.</p>
+                        <h3>Senior AI Engineer</h3>
+                        <p class="timeline-date">2021 - Present</p>
+                        <p>Leading AI/ML initiatives and developing advanced machine learning solutions for enterprise
+                            applications.</p>
                         <ul class="timeline-details">
-                            <li>Architected and developed scalable web applications using React and Node.js</li>
-                            <li>Implemented CI/CD pipelines and automated testing strategies</li>
-                            <li>Led a team of 5 developers in delivering complex projects</li>
+                            <li>Architected and implemented a real-time fraud detection system using TensorFlow and
+                                PyTorch, achieving 95% accuracy in anomaly detection</li>
+                            <li>Developed and deployed NLP models for sentiment analysis and text classification using
+                                BERT and Transformers</li>
+                            <li>Implemented computer vision solutions using OpenCV and YOLOv5 for object detection and
+                                tracking</li>
+                            <li>Built scalable ML pipelines using Apache Spark and Dask for processing large-scale
+                                datasets</li>
+                            <li>Optimized model performance using techniques like quantization, pruning, and knowledge
+                                distillation</li>
+                            <li>Led a team of 4 ML engineers in developing and deploying AI solutions to production</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>AI Research Engineer</h3>
+                        <p class="timeline-date">2019 - 2021</p>
+                        <p>Researched and developed cutting-edge AI solutions for natural language processing and
+                            computer vision applications.</p>
+                        <ul class="timeline-details">
+                            <li>Developed custom transformer architectures for multilingual text processing using
+                                PyTorch</li>
+                            <li>Implemented reinforcement learning algorithms for automated decision-making systems</li>
+                            <li>Created computer vision models for medical image analysis using U-Net and ResNet
+                                architectures</li>
+                            <li>Built and deployed ML models on cloud platforms (AWS SageMaker, Google AI Platform)</li>
+                            <li>Published research papers on novel approaches to transfer learning in NLP</li>
+                            <li>Optimized model inference time by 60% using TensorRT and ONNX Runtime</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Senior Software Engineer</h3>
+                        <p class="timeline-date">2017 - 2019</p>
+                        <p>Led development of enterprise-level applications and implemented AI/ML features in production
+                            systems.</p>
+                        <ul class="timeline-details">
+                            <li>Integrated machine learning models into production systems using TensorFlow Serving</li>
+                            <li>Developed RESTful APIs for ML model serving using FastAPI and Flask</li>
+                            <li>Implemented automated testing and CI/CD pipelines for ML models</li>
+                            <li>Built data processing pipelines using Apache Kafka and Apache Spark</li>
+                            <li>Optimized database queries and implemented caching strategies for ML applications</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Software Engineer</h3>
-                        <p class="timeline-date">2015 - 2019</p>
-                        <p>Developed and maintained web and mobile applications, collaborated with cross-functional
-                            teams, and implemented new features.</p>
+                        <p class="timeline-date">2015 - 2017</p>
+                        <p>Developed and maintained web applications with focus on data processing and analytics.</p>
                         <ul class="timeline-details">
-                            <li>Built responsive web applications using modern JavaScript frameworks</li>
-                            <li>Developed mobile applications using React Native</li>
-                            <li>Integrated third-party APIs and services</li>
+                            <li>Built data processing pipelines for ML model training and inference</li>
+                            <li>Implemented real-time data analytics using Apache Spark and Kafka</li>
+                            <li>Developed RESTful APIs and microservices using Node.js and Python</li>
+                            <li>Created data visualization dashboards using D3.js and React</li>
+                            <li>Integrated third-party ML APIs and services into applications</li>
                         </ul>
                     </div>
                 </div>
@@ -168,7 +211,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1639762681057-408e52192e55?w=800"
-                            alt="Blockchain Platform">
+                            alt="DeFi Platform">
                     </div>
                     <div class="project-content">
                         <h3>Decentralized Finance Platform</h3>
@@ -184,7 +227,8 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=800" alt="Mobile App">
+                        <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=800"
+                            alt="Healthcare App">
                     </div>
                     <div class="project-content">
                         <h3>Healthcare Mobile Application</h3>
@@ -200,7 +244,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?w=800"
+                        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=800"
                             alt="E-commerce Platform">
                     </div>
                     <div class="project-content">
@@ -233,7 +277,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?w=800"
+                        <img src="https://images.unsplash.com/photo-1620321023374-d1a68fbc720d?w=800"
                             alt="Blockchain Supply Chain">
                     </div>
                     <div class="project-content">
@@ -250,8 +294,8 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=800"
-                            alt="Real-time Platform">
+                        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800"
+                            alt="Collaboration Platform">
                     </div>
                     <div class="project-content">
                         <h3>Real-time Collaboration Platform</h3>
@@ -280,19 +324,19 @@
                         <p>anas.mohamed@gmail.com</p>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-linkedin"></i>
-                        <a href="https://www.linkedin.com/in/anas-fullstack/">LinkedIn</a>
-                    </div>
-                    <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>Egypt, Cairo</p>
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link" title="Medium"><i class="fab fa-medium"></i></a>
+                    <a href="https://github.com/anas-mohamed" class="social-link" title="GitHub"><i
+                            class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/anas-mohamed" class="social-link" title="LinkedIn"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/anas_mohamed" class="social-link" title="Twitter"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://medium.com/@anas.mohamed" class="social-link" title="Medium"><i
+                            class="fab fa-medium"></i></a>
                 </div>
             </div>
         </div>
@@ -301,7 +345,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Edgard Murillo. All rights reserved.</p>
+            <p>&copy; 2024 Anas Mohamed. All rights reserved.</p>
         </div>
     </footer>
 
